--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
 
                 <div class="form__row">
                     <select name="dayofbirth">
-                        <option value="">Giorno</option>
+                        <option value="00">Giorno</option>
                         <option value="01">01</option>
                         <option value="02">02</option>
                         <option value="03">03</option>
@@ -107,7 +107,7 @@
                     </select>
 
                     <select name="monthofbirth" class="month">
-                        <option value="">Mese</option>
+                        <option value="00">Mese</option>
                         <option value="01">01</option>
                         <option value="02">02</option>
                         <option value="03">03</option>
@@ -123,7 +123,7 @@
                     </select>
 
                     <select name="yearofbirth">
-                        <option selected="true" disabled="disabled" value="">Anno</option>
+                        <option value="00">Anno</option>
                         <option value="2010">2010</option>
                         <option value="2009">2009</option>
                         <option value="2008">2008</option>
