--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
                 <div class="form__name">
                     <div class="form__row">
                         <input type="text" name="firstname" id="firstname">
-                        <label id="label_firstname" for="firstname" class="label">Nome</label>
+                        <label for="firstname" class="label firstname__label">Nome</label>
 
                         <span class="firstname__error error"></span>
                     </div>
@@ -52,7 +52,7 @@
                     <div class="form__row">
                         <input type="text" name="lastname" id="lastname">
 
-                        <label id="label_lastname" for="lastname" class="label">Cognome</label>
+                        <label for="lastname" class="label lastname__label">Cognome</label>
 
                         <span class="lastname__error error"></span>
                     </div>
@@ -61,7 +61,7 @@
                 <div class="form__row mt">
                     <input type="email" name="email" id="email">
 
-                    <label id="label_email" for="email" class="label">Email</label>
+                    <label for="email" class="label email__label">Email</label>
 
                     <span class="email__error error"></span>
                 </div>
